--- a/test/build.gradle
+++ b/test/build.gradle
@@ -32,6 +32,8 @@ dependencies {
 	compile 'org.apache.httpcomponents:fluent-hc:4.3.6'
 	compile 'com.googlecode.json-simple:json-simple:1.1.1'
 
+	compile fileTree(dir: 'libs', include: '*.jar')
+
 }
 
 task wrapper(type: Wrapper) {
